--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "scripts": {
     "test": "nodemon --ext ts --exec ts-node src/index.ts",
     "build": "tsc --outDir target/ src/index.ts",
-    "start": "node target/"
+    "start": "node target/",
+    "lint": "eslint ."
   },
   "repository": {
     "type": "git",
