--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
   "homepage": "https://github.com/kiriDevs/ksmpdcbot#readme",
   "description": "",
   "dependencies": {
+    "@discordjs/builders": "^0.12.0",
+    "@discordjs/rest": "^0.3.0",
     "axios": "^0.25.0",
+    "discord-api-types": "^0.26.1",
     "discord.js": "^13.6.0",
     "dotenv": "^15.0.0"
   },
